2007-03-03  Akim Demaille  <akim.demaille@free.fr>

	* init.mk (CLEANFILES): Get rid of more manifest files.

2007-03-01  Akim Demaille  <demaille@gostai.com>

	Don't pass -Werror to aibo because of OPEN-R
	* urbi-prog-cxx.m4: here.

2007-03-01  Akim Demaille  <demaille@gostai.com>

	Stop forcing VERBOSE=1
	* check.mk: here.

2007-03-01  Akim Demaille  <demaille@gostai.com>

	Clarify/simplify the KERNEL_*FLAGS
	* urbi-dirs.m4: More documentation.
	For the core, do not define SDK_*FLAGS, define KERNEL_*FLAGS.

2007-03-01  Thomas Moulard  <thomas.moulard@lrde.epita.fr>

	Simplify urbi-with-openhrp.
	* urbi-with-openhrp.m4: Simplify macro.

2007-03-01  Thomas Moulard  <thomas.moulard@lrde.epita.fr>

	Add robot name support for OpenHRP.
	* urbi-with-openhrp.m4: Add with-robot macro.
	* urbi-with-orbix.m4: Lowercase variables.

2007-03-01  Akim Demaille  <demaille@gostai.com>

	Let the kernel install the urbi header in its include directory
	* urbi-dirs.m4 (urbiincludedir): When the package is a kernel,
	define it using kernelincludedir.

2007-03-01  Akim Demaille  <demaille@gostai.com>

	Force verbosity for the BF
	* check.mk: Use set -x at various places.
	To be removed once I understand why check-html does not work.

2007-03-01  Thomas Moulard  <thomas.moulard@lrde.epita.fr>

	Fix OpenHRP and ORBIX macros.
	* urbi-with-openhrp.m4: Fix variables.
	* urbi-with-orbix.m4: Idem.

2007-03-01  Akim Demaille  <demaille@gostai.com>

	* urbi-dirs.m4: Use AU_DEFUN for obsolete macros.
	* urbi-libport.m4: Define libportdir.

2007-03-01  Akim Demaille  <demaille@gostai.com>

	PACKAGE_KIND
	* urbi-package-kind.m4 (URBI_PACKAGE_KIND, URBI_PACKAGE_KIND_SWITCH):
	New.
	* urbi-dirs.m4: Extracted from here.
	(_URBI_DIRS): Rename as...
	(URBI_DIRS): this.

2007-03-01  Akim Demaille  <demaille@gostai.com>

	* urbi-dirs.m4 (_URBI_DIRS): Fix default value display.

2007-03-01  Akim Demaille  <akim.demaille@free.fr>

	Force VERBOSE for the test suite