@@ -1,3 +1,8 @@
+2007-03-04  SIGOURE Benoit  <tsuna@lrde.epita.fr>
+
+	Search libcrypto under /usr/lib and /lib.
+	* urbi-with-openssl.m4: Here.
+
 2007-03-03  Akim Demaille  <akim.demaille@free.fr>
 
 	* init.mk (CLEANFILES): Get rid of more manifest files.
